--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Birthday Memory Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -16,56 +17,221 @@
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            background: #f0f0f0;
-            font-family: Arial, sans-serif;
+            background: rgb(0,36,34);
+            background: linear-gradient(90deg, rgba(0,36,34,1) 0%, rgba(9,81,121,1) 13%, rgba(0,224,255,1) 59%);
+            font-family: 'Poppins', sans-serif;
             padding: 20px;
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+
+        .birthday-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 2rem;
+            z-index: 1000;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            overflow: hidden;
+            animation: fadeOut 3s ease-in-out 8s forwards;
+        }
+
+        .birthday-screen::before {
+            content: '';
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                45deg,
+                #FFB6C1, #FFD700, #98FB98, #87CEEB,
+                #DDA0DD, #F0E68C, #E6E6FA, #FFA07A, #FFB6C1
+            );
+            animation: glowingBg 15s linear infinite;
+            background-size: 400%;
+            opacity: 0.7;
+        }
+
+        .birthday-screen::after {
+            content: '';
+            position: absolute;
+            inset: 4px;
+            background: rgba(255, 255, 255, 0.3);
+        }
+
+        @keyframes glowingBg {
+            0% { background-position: 0 0; }
+            50% { background-position: 400% 0; }
+            100% { background-position: 0 0; }
+        }
+
+        .birthday-message {
+            position: relative;
+            text-align: center;
+            color: #FF1493;
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            font-family: 'Pacifico', cursive;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.2),
+                     0 0 20px rgba(255,105,180,0.6),
+                     0 0 40px rgba(255,105,180,0.4);
+            animation: birthdayAnimation 2s ease-out;
+            line-height: 1.4;
+            padding: 0 10px;
+            z-index: 1;
+            margin: 0;
+        }
+
+        .glow-text {
+            position: relative;
+            font-size: clamp(1.5rem, 3vw, 2.5rem);
+            font-weight: bold;
+            color: rgb(218, 13, 142);
+            text-transform: uppercase;
+            text-align: center;
+            opacity: 0;
+            z-index: 1;
+            animation: fadeInDelayed 4s ease-in-out 5s forwards;
+            margin: 0;
+        }
+
+        @keyframes fadeInDelayed {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes birthdayAnimation {
+            0% {
+                transform: scale(0) rotate(-180deg);
+                opacity: 0;
+            }
+            50% {
+                transform: scale(1.2) rotate(10deg);
+            }
+            100% {
+                transform: scale(1) rotate(0);
+                opacity: 1;
+            }
+        }
+
+        .flower {
+            position: fixed;
+            pointer-events: none;
+            animation: fall linear infinite;
+            z-index: 2;
+        }
+
+        @keyframes fall {
+            0% { transform: translateY(-100vh) rotate(0deg); }
+            100% { transform: translateY(100vh) rotate(360deg); }
+        }
+
+        @keyframes fadeOut {
+            0% { 
+                opacity: 1; 
+                visibility: visible;
+                pointer-events: auto;
+            }
+            100% { 
+                opacity: 0; 
+                visibility: hidden;
+                pointer-events: none;
+            }
         }
 
         .game-info {
-            margin-bottom: 20px;
+            margin-bottom: clamp(10px, 2vw, 15px);
             text-align: center;
+            width: 100%;
+            max-width: 600px;
+            padding: 0 10px;
+        }
+
+        .game-info h1 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: clamp(1.5rem, 4vw, 2rem);
+            color: #333;
+            margin-bottom: clamp(5px, 1.5vw, 10px);
+        }
+
+        .game-info p {
+            font-size: clamp(0.9rem, 1.5vw, 1rem);
+            color: #555;
+            margin: 4px 0;
         }
 
         .difficulty {
-            margin: 10px 0;
+            margin: clamp(5px, 1.5vw, 8px) 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 8px;
         }
 
         .difficulty button {
-            padding: 8px 16px;
-            margin: 0 5px;
+            padding: clamp(4px, 1vw, 6px) clamp(8px, 1.5vw, 12px);
             border: none;
             border-radius: 4px;
             background: #4CAF50;
             color: white;
             cursor: pointer;
-            font-size: 16px;
+            font-size: clamp(12px, 1.2vw, 14px);
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+            transition: all 0.3s ease;
+            white-space: nowrap;
+            flex: 0 1 auto;
+        }
+
+        .difficulty button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         .difficulty button.active {
             background: #2E7D32;
+            font-weight: 600;
         }
 
         .game-grid {
             display: grid;
-            gap: 10px;
-            width: 100%;
+            gap: clamp(4px, 1vw, 8px);
+            width: 85vmin; /* Responsive based on viewport */
+            height: 85vmin;
             max-width: 600px;
+            max-height: 600px;
             margin: 0 auto;
-            padding: 10px;
+            padding: clamp(4px, 1vw, 8px);
             background: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            aspect-ratio: 1;
+            flex-shrink: 0;
+            overflow: hidden;
         }
 
         .card {
             aspect-ratio: 1;
-            border-radius: 8px;
+            border-radius: clamp(4px, 0.8vw, 6px);
             background: #fff;
             cursor: pointer;
             transition: transform 0.3s;
             position: relative;
             transform-style: preserve-3d;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            touch-action: manipulation;
         }
 
         .card.flipped {
@@ -81,7 +247,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 8px;
+            border-radius: clamp(4px, 0.8vw, 6px);
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
@@ -95,31 +261,105 @@
         }
 
         .shape {
-            width: 60%;
-            height: 60%;
+            width: clamp(50%, 60%, 70%);
+            height: clamp(50%, 60%, 70%);
         }
 
-        @media (max-width: 600px) {
+        /* Small devices (phones) */
+        @media (max-width: 480px) {
+            .game-grid {
+                max-height: calc(100vh - 200px);
+            }
+
+            .difficulty {
+                flex-direction: column;
+                align-items: stretch;
+            }
+
+            .difficulty button {
+                width: 100%;
+                margin: 0;
+                padding: 8px;
+            }
+        }
+
+        /* Medium devices (tablets) */
+        @media (min-width: 481px) and (max-width: 768px) {
+            .game-grid {
+                max-height: calc(100vh - 180px);
+            }
+        }
+
+        /* Landscape orientation */
+        @media (max-height: 500px) and (orientation: landscape) {
             body {
-                padding: 10px;
+                padding: 8px;
+            }
+
+            .game-info {
+                margin-bottom: 8px;
+            }
+
+            .game-info h1 {
+                font-size: 1.2rem;
+                margin-bottom: 4px;
+            }
+
+            .difficulty {
+                margin: 4px 0;
             }
 
             .game-grid {
-                gap: 5px;
-                padding: 5px;
+                max-height: calc(100vh - 120px);
             }
-            
-            .difficulty button {
-                padding: 6px 12px;
-                margin: 0 2px;
-                font-size: 14px;
+        }
+
+        /* High DPI screens */
+        @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+            .card-front,
+            .card-back {
+                box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+            }
+        }
+
+        /* Dark mode support */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background: rgb(0,36,34);
+                background: linear-gradient(90deg, rgba(0,36,34,1) 0%, rgba(9,81,121,1) 13%, rgba(0,224,255,1) 59%);
+            }
+
+            .game-info h1 {
+                color: #fff;
+            }
+
+            .game-info p {
+                color: #ddd;
+            }
+
+            .game-grid {
+                background: #2d2d2d;
+                box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            }
+
+            .card {
+                box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            }
+
+            .card-back {
+                background: #3d3d3d;
             }
         }
     </style>
 </head>
 <body>
+    <div class="birthday-screen">
+        <h1 class="birthday-message">Happy Birthday Homey!! ❤️❤️</h1>
+        <h2 class="glow-text">This was unexpected henna 😅</h2>
+    </div>
     <div class="game-info">
-        <h1>Memory Game</h1>
+        <h1 style="color: purple;">Memory Game</h1>
+        <p style="color: rgb(255, 11, 35); font-size: large; font-weight: 600; border: 2px dashed rgb(203, 34, 203); text-decoration: dotted;">Enjoy your day by exercising your memory!</p>
         <p>Current Moves: <span id="moves">0</span></p>
         <p>Total Moves: <span id="total-moves">0</span></p>
         <div class="difficulty">
@@ -129,6 +369,31 @@
         </div>
     </div>
     <div class="game-grid"></div>
+    <script>
+        // Create falling flowers
+        function createFlower() {
+            const flower = document.createElement('div');
+            flower.className = 'flower';
+            flower.innerHTML = '🌸';
+            flower.style.left = Math.random() * 100 + 'vw';
+            flower.style.fontSize = (Math.random() * 20 + 10) + 'px';
+            flower.style.animationDuration = (Math.random() * 3 + 2) + 's';
+            document.body.appendChild(flower);
+
+            // Remove flower after animation
+            setTimeout(() => {
+                flower.remove();
+            }, 10000);
+        }
+
+        // Create flowers every 100ms
+        const flowerInterval = setInterval(createFlower, 50);
+
+        // Stop creating flowers after 4 seconds
+        setTimeout(() => {
+            clearInterval(flowerInterval);
+        }, 10000);
+    </script>
     <script type="module" src="/game.js"></script>
 </body>
 </html>
