--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@
         }
 
         .card-back {
-            background: #ffffff;
+           linear-gradient(135deg, #00e0ff 0%, #095179 100%);
             transform: rotateY(180deg);
+             border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         .shape {
@@ -327,6 +328,7 @@
             body {
                 background: rgb(0,36,34);
                 background: linear-gradient(90deg, rgba(0,36,34,1) 0%, rgba(9,81,121,1) 13%, rgba(0,224,255,1) 59%);
+
             }
 
             .game-info h1 {
@@ -347,7 +349,8 @@
             }
 
             .card-back {
-                background: #3d3d3d;
+                 background: linear-gradient(135deg, #00e0ff 0%, #095179 100%);
+                border: 2px solid rgba(255, 255, 255, 0.2);
             }
         }
     </style>
