--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
     <div class="game-info">
         <h1 style="color: purple;">Memory Game</h1>
         <p style="color: rgb(255, 11, 35); font-size: large; font-weight: 600; border: 2px dashed rgb(203, 34, 203); text-decoration: dotted;">Enjoy your day by exercising your memory!</p>
-        <p>Current Moves: <span id="moves">0</span></p>
-        <p>Total Moves: <span id="total-moves">0</span></p>
+        <p style="color:yellow">Current Moves: <span id="moves">0</span></p>
+        <p style="color:yellow">Total Moves: <span id="total-moves">0</span></p>
         <div class="difficulty">
             <button data-size="4" class="active">Easy (4x4)</button>
             <button data-size="6">Medium (6x6)</button>
